2004-03-28  John Luke  <jluke@cfl.rr.com>

	* Services/ParserService/DefaultParserService.cs:
	if filename == null don't switch on it

2004-03-27  Todd Berman  <tberman@sevenl.net>

	* Commands/FileCommands: remove save as notification, as its useless
	closes bug #56126

2004-03-27  Todd Berman  <tberman@sevenl.net>

	* Internal/Parser/*: update to new parser from upstream.
	* Gui/ContentInterfaces/IParseInformationListener.cs: update.
	* Gui/Pads/ClassScout/NodeBuilder/DefaultDotNetClassScoutNodeBuilder.cs:
		rework to use SortUtilities and a TreeNodeComparer for removal
		this should fix 99% of those strange class browser bugs.
	* Gui/CompletionDatabaseWizard/CreateDBGenerator.cs:
		update to reflect new parser changes.
	* Services/ParserService/*: update from upstream, add some of our mods
	* Services/ProjectService/ParseInformationEventHandler.cs:
	* Services/ClassBrowserIcons/ClassBrowserIconsService.cs:
	* Services/AmbienceService/*:
	* Commands/AutostartCommands.cs: update to reflect other changes.
	* Makefile.am: update with new files.

2004-03-26  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/SharpDevelopAboutPanels.cs:
	enable copy button for assembly version info
	fixes bug #55955
	* Gui/Pads/ProjectBrowser/BrowserNode/FileNode.cs:
	workaround/fix for #55185, a confusing message when
	removing a file from a project, need to revisit it later
	* Gui/Pads/HelpBrowser/MonodocTreePad.cs:
	expand the first row by default
	* Gui/Pads/ProjectBrowser/ProjectBrowserView.cs:
	expand the first row by default

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* Makefile.am:
	* Gui/HtmlControl/MozillaControl.cs:
	* Gui/BrowserDisplayBinding/HtmlViewPane.cs: updated for gecko-sharp

2004-03-25  Todd Berman  <tberman@sevenl.net>

	* Services/File/DefaultFileService.cs: adding a new method of external
	app launching based on gnome vfs stuff, works around broken gnome
	installs.

2004-03-21  John Luke  <jluke@cfl.rr.com>
